@@ -1,5 +1,5 @@
 #
-__version__ = '1.6.0'
+__version__ = '1.6.1'
 
 class exception:
     class Error(Exception):
